@@ -10,18 +10,7 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <dependencies>
-        <!-- Dependencia de JavaFX -->
-        
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>21</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>21</version>
-        </dependency>
+
         <dependency>
             <groupId>org.netbeans.external</groupId>
             <artifactId>AbsoluteLayout</artifactId>
@@ -33,51 +22,5 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <release>17</release>
-                </configuration>
-            </plugin>
-            <plugin>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-maven-plugin</artifactId>
-    <version>0.0.5</version> <!-- Cambié la versión a una más estable -->
-    <configuration>
-        <mainClass>com.pruebapantallas.BattleshipGame</mainClass>
-    </configuration>
-</plugin>
-
-<plugin>
-    <groupId>org.codehaus.mojo</groupId>
-    <artifactId>exec-maven-plugin</artifactId>
-    <version>3.1.0</version>
-    <executions>
-        <execution>
-            <goals>
-                <goal>exec</goal>
-            </goals>
-            <configuration>
-                <executable>java</executable>
-                <arguments>
-                    <argument>--module-path</argument>
-                    <argument>${path.to.javafx}/lib</argument> <!-- Ruta al directorio 'lib' de JavaFX -->
-                    <argument>--add-modules</argument>
-                    <argument>javafx.controls,javafx.fxml</argument> <!-- Módulos necesarios -->
-                    <argument>-jar</argument>
-                    <argument>${project.build.directory}/${project.build.finalName}.jar</argument>
-                </arguments>
-            </configuration>
-        </execution>
-    </executions>
-</plugin>
-
-
-        </plugins>
-    </build>
-    <name>battleship_ClientView</name>
+        <name>battleship_ClientView</name>
 </project>
